# mcpctl

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  release-please-config.json
.github/workflows/: release-please.yml  test.yml
assets/: hero-variants.html
examples/: .env.example  mcp-servers.example.yaml
mcpctl/: __init__.py  __main__.py
