[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-ctrl"
version = "0.5.3"
description = "Universal MCP Server Manager for Claude Code"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Savitoj Singh", email = "savv@duck.com"}
]
maintainers = [
    {name = "Savitoj Singh", email = "savv@duck.com"}
]
keywords = [
    "mcp",
    "model-context-protocol",
    "claude",
    "claude-code",
    "ai",
    "llm",
    "docker",
    "podman",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/savitojs/mcpctl"
Repository = "https://github.com/savitojs/mcpctl"
Documentation = "https://github.com/savitojs/mcpctl/blob/main/README.md"
"Bug Tracker" = "https://github.com/savitojs/mcpctl/issues"

[project.scripts]
mcpctl = "mcpctl.__main__:main"

[tool.setuptools]
packages = ["mcpctl"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
